--- a/backend/config/src/main/resources/application.yml
+++ b/backend/config/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     config:
       server:
         native:
-          search-locations: ${search.location:file:///${user.home}/workspace.edu/egovframe-msa-edu/config} # Windows
+          search-locations: ${search.location:file:///${user.home}/workspace.edu/egovframe-msa-edu/config} # Windows local develop
 #           search-locations: file://${user.home}/workspace.edu/egovframe-msa-edu/config # MacOS
   rabbitmq:
     host: ${rabbitmq.hostname:localhost}
